[package]
name = "axion-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlDivElement", "WebSocket", "MessageEvent", "ErrorEvent", "Window", "HtmlElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
reqwasm = "0.5"
gloo-timers = { version = "0.3" }
js-sys = "0.3"
